--- a/our-team.html
+++ b/our-team.html
@@ -319,25 +319,13 @@
         <div class="row mb-4">
           <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Jared Rice Sr.jpg" alt="Jared Rice Sr.">
+              <img class="card-img-top team-image" src="assets/img/team/Michael taggart.jpg" alt="Michael Taggart">
               <div class="card-body py-3">
-                <h5 class="mb-0">Jared Rice Sr.</h5>
-                <span>Founder</span>
+                <h5 class="mb-0">Michael Taggart</h5>
+                <span>Chief Evangelist</span>
               </div>
               <div class="card-footer pt-0 border-top-0">
-                <a href="#">jared@peepsx.com</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 d-flex">
-            <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Shikhar-Srivastava.jpg" alt="Shikhar Srivastava">
-              <div class="card-body py-3">
-                <h5 class="mb-0">Shikhar Srivastava</h5>
-                <span>Chief Technology Officer</span>
-              </div>
-              <div class="card-footer pt-0 border-top-0">
-                <a href="#">shikhar@peepsx.com</a>
+                <a href="#">michael@peepsx.com</a>
               </div>
             </div>
           </div>
@@ -355,52 +343,31 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Michael taggart.jpg" alt="Michael Taggart">
+              <img class="card-img-top team-image" src="assets/img/team/Shikhar-Srivastava.jpg" alt="Shikhar Srivastava">
               <div class="card-body py-3">
-                <h5 class="mb-0">Michael Taggart</h5>
-                <span>Chief Evangelist</span>
+                <h5 class="mb-0">Shikhar Srivastava</h5>
+                <span>Chief Technology Officer</span>
               </div>
               <div class="card-footer pt-0 border-top-0">
-                <a href="#">michael@peepsx.com</a>
+                <a href="#">shikhar@peepsx.com</a>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/asutosh.png" alt="Ashutosh Singh">
+              <img class="card-img-top team-image" src="assets/img/team/Jared Rice Sr.jpg" alt="Jared Rice Sr.">
               <div class="card-body py-3">
-                <h5 class="mb-0">Ashutosh Singh</h5>
-                <span>Developer</span>
+                <h5 class="mb-0">Jared Rice Sr.</h5>
+                <span>Lead Developer</span>
               </div>
               <div class="card-footer pt-0 border-top-0">
-                <a href="#">ashutosh@peepsx.com</a>
+                <a href="#">jared@peepsx.com</a>
               </div>
             </div>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 d-flex">
-            <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Kumar-Ujjawal.jpg" alt="Kumar Ujjawal">
-              <div class="card-body py-3">
-                <h5 class="mb-0">Kumar Ujjawal</h5>
-                <span>Developer</span>
-              </div>
-              <div class="card-footer pt-0 border-top-0">
-                <a href="#">ujjawal@peepsx.com</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 d-flex">
-            <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Bhanu-Shankar.png" alt="Bhanu Shankar">
-              <div class="card-body py-3">
-                <h5 class="mb-0">Bhanu Shankar</h5>
-                <span>Developer</span>
-              </div>
-              <div class="card-footer pt-0 border-top-0">
-                <a href="#">bhanu@peepsx.com</a>
-              </div>
-            </div>
-          </div>
+
+
+
           <!-- <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
               <div class="card-body">
