--- a/dsocial.html
+++ b/dsocial.html
@@ -294,10 +294,10 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Here Is Your Voice Back.</h1>
-                <span class="h1 text-white d-block" data-countdown-date="2021-3-31">221 days 09:19:00</span>
+                <span class="h1 text-white d-block" data-countdown-date="2022-09-11">221 days 09:19:00</span>
                 <p class="description" style="color: #fff;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and take your voice back.</p>
                 <div class="text-center">
-                  <a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a>
+                  <a href="https://signup.dsocial.network/" class="btn btn-lg btn-white">Join The Social Revolution</a>
                   <a href="https://github.com/peepsx/dsocial-whitepaper" class="btn btn-lg btn-white">Read Whitepaper</a>
                 </div>
                 <a href="#censorship-resistant"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
